# bfpg-2015-08

./: LICENSE  README.md  gre.txt
demo/: Hiding.hs  Main  Main.hs  Utils.hs  build_in_sandbox_scratch.sh  cabal.config  demo.cabal  quick_rebuild.sh
using-the-ghc-api/: Carlo.lhs  Slides.lhs  build_in_sandbox_scratch.sh  go  talk.cabal
