name:                demo
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Carlo Hamalainen
maintainer:          carlo@carlo-hamalainen.net
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable demo
  main-is:             Main.hs
  other-modules:       Utils
  -- other-extensions:
  build-depends:       base >=4.7 && <4.8
                     , syb
                     , ghc
                     , ghc-paths
                     , ghc-syb-utils
                     , mtl
  -- hs-source-dirs:
  default-language:    Haskell2010
