name:                talk
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Carlo Hamalainen
maintainer:          carlo@carlo-hamalainen.net
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Before, After
  -- other-modules:
  -- other-extensions:
  build-depends:       base, lens
  -- ghc-options:      -Wall
  -- hs-source-dirs:
  default-language:    Haskell2010
